--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
+    "mongoose": "^4.1.2",
     "morgan": "^1.6.1"
   }
 }
