Added in all backend API routes for adding books and reveiws for users.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.0.4",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1"
   }
